--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "standart --verbose | snazzy"
+    "lint": "eslint src/*"
   },
   "devDependencies": {
     "eslint-config-airbnb": "16.1.0",
